--- a/src/styles/notes/notes-list.module.css
+++ b/src/styles/notes/notes-list.module.css
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   background-color: white;
